# elmethis

./: .code-workspace  .gitignore  .markdownlint-cli2.jsonc  .mcp.json  .prettierignore  AGENTS.md  CLAUDE.md  Cargo.toml  README.md  SOLID_PORTING_PLAN.md  TESTING.md  codecov.yml  index.html  lefthook.yml  opencode.json  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  skills-lock.json  vite.config.ts
.agents/skills/conventional-commits/: SKILL.md
.agents/skills/qwik/: SKILL.md
.claude/: settings.json
.claude/hooks/: lefthook-check.mts  lefthook-check.sh  lefthook-fmt.mts  tsconfig.json
.claude/hooks/fixtures/: README.md  fmt-formattable.json  fmt-no-path.json  fmt-non-matching.json  fmt-outside-repo.json  run.sh  sample.json  stop-active.json  stop-inactive.json
.claude/rules/: a2ui.md  components.md  core.md  testing.md
.claude/skills/: a2ui-knowledge  ag-ui-knowledge  mcp-knowledge
.design-sync/: NOTES.md  config.json  conventions.md  inject-reference-fonts.mjs  make-css-entry.mjs  react-compiler-runtime.mjs  shiki-tsconfig.json
.design-sync/fonts/: fetch.mjs  fonts.css
.design-sync/previews/: ElmAudioPlayer.tsx  ElmCodeBlock.tsx  ElmHtml.tsx  ElmHtmlViewer.tsx  ElmShikiHighlighter.tsx
.design-sync/shiki-slim/: index.mjs  package-lock.json  package.json
.devcontainer/: devcontainer.json
.github/: dependabot.yml  pull_request_template.md
.github/workflows/: ag-ui-stub.yml  build-test.yml  build.yml  core-build.yml  core.yml  ikuma-theme.yml  notion-node-build.yml  pages-deploy.yml  qwik.yml  react.yml  solid.yml  storybook-deploy.yml  unit-test.yml  vue.yml
.husky/: pre-commit
.storybook/: sb.scss
crates/elmethis-json-component-types/: Cargo.toml
crates/elmethis-json-component-types/src/: lib.rs
crates/elmethis-json-component-types/tests/: main.rs
crates/elmethis-notion/: Cargo.toml
crates/elmethis-notion/src/: block.rs  client.rs  error.rs  lib.rs  main.rs
scripts/: verify-framework-style.mjs
src/: index.ts
src/components/code/: ElmCodeBlock.vue  ElmKatex.stories.tsx  ElmKatex.vue  ElmPrismHighlighter.vue
src/components/containments/: ElmToggle.stories.tsx  ElmToggle.vue  ElmTooltip.stories.tsx  ElmTooltip.vue
src/components/fallback/: ElmRectangleWave.stories.tsx  ElmRectangleWave.vue
src/components/form/: ElmCheckbox.vue
src/components/headings/: ElmHeading1.vue  (+7 more)
terraform/github/: label.tf  provider.tf  repository.tf  rulesets.tf
vite-project/: app.vue  package-lock.json  package.json
(+50 files in other folders)
