[package]
name = "elmethis-notion"
version = "1.0.0-alpha.1"
edition = "2021"
description = "Notion to Elmethis"
authors = ["Chomolungma Shirayuki"]
repository = "https://github.com/46ki75/elmethis-notion"
license = "MIT"
documentation = "https://docs.rs/elmethis-notion"

[dependencies]
async-recursion = "1.1.1"
dotenvy = "0.15.7"
notionrs = "1.0.0-alpha.17"
reqwest = "0.12.9"
scraper = "0.21.0"
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.133"
thiserror = "2.0.3"
tokio = { version = "1.41.1", features = ["full"] }
