[package]
name = "elmethis-notion"
version = "1.0.0-alpha.25"
edition = "2024"
description = "Notion to Elmethis"
authors = ["Chomolungma Shirayuki"]
repository = "https://github.com/46ki75/elmethis-notion"
license = "MIT"
documentation = "https://docs.rs/elmethis-notion"

[dependencies]
reqwest = { version = "0.12.9", default-features = false }
async-recursion = "1.1.1"
dotenvy = "0.15.7"
notionrs = "1.0.0-alpha.38"
scraper = "0.21.0"
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.133"
thiserror = "2.0.3"
tokio = { version = "1.41.1", features = ["full"] }
url = "2.5.4"


[features]
default = ["rustls-tls", "gzip"]
rustls-tls = ["reqwest/rustls-tls", "notionrs/rustls-tls"]
native-tls = [
    "reqwest/default-tls",
    "reqwest/native-tls",
    "notionrs/native-tls",
]
native-tls-alpn = ["reqwest/native-tls-alpn", "notionrs/native-tls-alpn"]
gzip = ["reqwest/gzip", "notionrs/gzip"]
brotli = ["reqwest/brotli", "notionrs/brotli"]
